--- a/WebSiteClothesStore/Views/Card/ShowCardProduct.cshtml
+++ b/WebSiteClothesStore/Views/Card/ShowCardProduct.cshtml
@@ -38,6 +38,10 @@
         {
             foreach (var item in listCardTemp)
             {
+                if (item.MaCT != null && item.MaSP != null)
+                {
+
+
                 <tr id="@item.MaCTDDH" class="trProDuct">
                     <td>@item.TenSP</td>
                     <td><img src="@Url.Content(@item.HinhAnh)" width="50" height="50" /></td>
@@ -83,18 +87,22 @@
                         <a href="@Url.Action("DeleteProductInDetailCard", new { @maSP = item.MaSP, @maCTDDH = item.MaCTDDH, @maCTSP = item.MaCT })"><i class="fa-solid fa-trash-can"></i></a>
                     </td>
                 </tr>
-
-            }
+                            }
+                        }
             <tr style="font-weight: bold; text-align: left; color:red">
 
                 <td colspan="8"> Tổng tiền: (@String.Format("{0:0,0}", @ViewBag.TongThanhTien)) | VNĐ </td>
             </tr>
 
-        }
-        else if (listCardCSDL != null)
-        {
-            foreach (var item in listCardCSDL)
-            {
+                        }
+                        else if (listCardCSDL != null)
+                        {
+                            foreach (var item in listCardCSDL)
+                            {
+                                if (item.MaSP != null && item.MaCTSP != null)
+                                {
+
+
                 <tr id="@item.MaCTDDH" class="trProDuct">
                     <td>@item.TenSP</td>
                     <td><img src="@Url.Content(@item.BangSanPham.Anh1)" width="50" height="50" /></td>
@@ -138,7 +146,7 @@
                         <a href="@Url.Action("DeleteProductInDetailCard", new { @maSP = item.MaSP, @maCTDDH = item.MaCTDDH, @maCTSP = item.MaCTSP })"><i class="fa-solid fa-trash-can"></i></a>
                     </td>
                 </tr>
-            }
+                        }
             <tr style="font-weight: bold; text-align: left; color:red">
 
                 <td colspan="12" style="margin-left:100px;"> Tổng tiền: (@String.Format("{0:0,0}", @ViewBag.TongThanhTien)) | VNĐ </td>
@@ -147,118 +155,120 @@
 
                 <td><a href="@Url.Action("DeleteProductInDetailCard")">Xóa tất cả</a></td>
             </tr>
-
-        }
-    }
+                                }
+                            }
+                        }
 </table>
 
 @if (listCardTemp != null || listCardCSDL != null)
 {
     <h2 style="text-align:center; margin-top:50px;">Nhập thông tin nhận hàng</h2>
     <div class="ThongTinMuaHang">
-        <table align="center" class="tableInfoClient">
-            <tr>
-                <td align="center" colspan="2"><b>Thông tin khách hàng</b></td>
-            </tr>
-            @using (Html.BeginForm("OrderProducts", "Card"))
-            {
+        @using (Html.BeginForm("OrderProducts", "Card"))
+        {
+            <table align="center" class="tableInfoClient">
+                <tr>
+                    <td align="center" colspan="2"><b>Thông tin khách hàng</b></td>
+                </tr>
+
                 @* Thiết kế form lưu thông tin khách hàng*@
-            if (Session["TaiKhoan"] == null)
-            {
+                @if (Session["TaiKhoan"] == null)
+                {
 
 
 
-                    <tr>
-                        <td>Họ tên</td>
-                        <td>
-                            @Html.TextBox("TenKH")
-                            <span style="color: red; display: block;" id="TB_TenKhachHang"></span>
-                        </td>
+                <tr>
+                    <td>Họ tên</td>
+                    <td>
+                        @Html.TextBox("TenKH")
+                        <span style="color: red; display: block;" id="TB_TenKhachHang"></span>
+                    </td>
 
-                    </tr>
-                    <tr>
-                        <td>Địa chỉ</td>
-                        <td>
-                            @Html.TextArea("DiaChi")
-                            <span style="color:red; display:block;" id="TB_DiaChi"></span>
-                        </td>
+                </tr>
+                <tr>
+                    <td>Địa chỉ</td>
+                    <td>
+                        @Html.TextArea("DiaChi")
+                        <span style="color:red; display:block;" id="TB_DiaChi"></span>
+                    </td>
 
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td>@Html.TextBox("Email")</td>
-                        <span style="color:red; display:block;" id="TB_Email"></span>
-                    </tr>
-                    <tr>
-                        <td>Số điện thoại</td>
-                        <td>@Html.TextBox("SDT")</td>
-                        <span style="color:red; display:block;" id="TB_SDT"></span>
-                    </tr>
-                    <tr style="display:none;">
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td>@Html.TextBox("Email")</td>
+                    <span style="color:red; display:block;" id="TB_Email"></span>
+                </tr>
+                <tr>
+                    <td>Số điện thoại</td>
+                    <td>@Html.TextBox("SDT")</td>
+                    <span style="color:red; display:block;" id="TB_SDT"></span>
+                </tr>
+                <tr style="display:none;">
 
-                        <td>@Html.Hidden("MaTV", 1)</td>
-                    </tr>
+                    <td>@Html.Hidden("MaTV", 1)</td>
+                </tr>
 
 
-            }
-            else
-            {
-                    <tr>
-                        <td>Họ tên</td>
-                        <td>
-                            <input type="text" id="TenKH" name="TenKH" class="TenKH" value="@ViewBag.KhachHang.TenKH" />
-                            <span style="color:red;" id="TB_TenKhachHang"></span>
-                        </td>
+                }
+                else
+                {
+                <tr>
+                    <td>Họ tên</td>
+                    <td>
+                        <input type="text" id="TenKH" name="TenKH" class="TenKH" value="@ViewBag.KhachHang.TenKH" />
+                        <span style="color:red;" id="TB_TenKhachHang"></span>
+                    </td>
 
-                    </tr>
-                    <tr>
-                        <td>Địa chỉ</td>
-                        <td>
-                            <textarea type="text" id="DiaChi" name="DiaChi" class="DiaChi" value="@ViewBag.KhachHang.DiaChi">
+                </tr>
+                <tr>
+                    <td>Địa chỉ</td>
+                    <td>
+                        <textarea type="text" id="DiaChi" name="DiaChi" class="DiaChi" value="@ViewBag.KhachHang.DiaChi">
                             @ViewBag.KhachHang.DiaChi
                             </textarea>
-                            <span style="color:red;" id="TB_DiaChi"></span>
-                        </td>
+                        <span style="color:red;" id="TB_DiaChi"></span>
+                    </td>
 
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td>
-                            <input type="email" id="Email" name="Email" class="Email" value="@ViewBag.KhachHang.Email" />
-                            <span id="ktEmail"></span>
-                        </td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td>
+                        <input type="email" id="Email" name="Email" class="Email" value="@ViewBag.KhachHang.Email" />
+                        <span id="ktEmail"></span>
+                    </td>
 
-                    </tr>
-                    <tr>
-                        <td>Số điện thoại</td>
-                        <td>
-                            <input type="number" id="Email" name="Email" class="Email" value="@ViewBag.KhachHang.SDT" />
+                </tr>
+                <tr>
+                    <td>Số điện thoại</td>
+                    <td>
+                        <input type="number" id="Email" name="Email" class="Email" value="@ViewBag.KhachHang.SDT" />
 
-                            <span style="color:red;" id="TB_SDT"></span>
-                        </td>
+                        <span style="color:red;" id="TB_SDT"></span>
+                    </td>
 
-                    </tr>
-                    <tr>
-                        <td>
-                            Thành viên
-                        </td>
-                        <td>
-                            <input type="text" readonly style="border:none;" id="MaThanhVien" name="MaThanhVien" class="MaThanhVien" value="@ViewBag.KhachHang.ThanhVien.LoaiTV.TenLoai" />
-                        </td>
+                </tr>
+                <tr>
+                    <td>
+                        Thành viên
+                    </td>
+                    <td>
+                        <input type="text" readonly style="border:none;" id="MaThanhVien" name="MaThanhVien" class="MaThanhVien" value="@ViewBag.KhachHang.ThanhVien.LoaiTV.TenLoai" />
+                    </td>
 
-                        @* Mã thành viên sẽ được tự cập nhật là 1 *@
-                    </tr>
+                    @* Mã thành viên sẽ được tự cập nhật là 1 *@
+                </tr>
 
                 }
-                }
+
             </table>
-</div>
-<div class="divDatHang" style="text-align:center">
-    <input type="submit" value="Đặt hàng" class="btn btn-danger" id="btn-dathang" />
-    <a href="@Url.Action("ShowAllProduct","Product")" class="btn btn-sussce">Mua tiếp</a>
-</div>
-    
-}
+
+            <div class="divDatHang" style="text-align:center">
+                <input type="submit" value="Đặt hàng" class="btn btn-danger" id="btn-dathang" />
+                <a href="@Url.Action("ShowAllProduct", "Product")" class="btn btn-sussce">Mua tiếp</a>
+            </div>
+        }
+    </div>
+            }
 <style>
     .titleStatusTitle{
         position:relative;
