Tron lam them nhieu hinh roi xem hoa don Nam lam sua voi chi tiet dung lam css lại nhiều giao diện thêm đăng nhập hơi xấu

--- a/WebSiteClothesStore/Views/Home/ShowCardUser.cshtml
+++ b/WebSiteClothesStore/Views/Home/ShowCardUser.cshtml
@@ -81,6 +81,24 @@
                         @db.CTDonDatHangs.Where(p => p.MaDDH == item.MaDDH).Sum(p => p.DonGia)
                     </td>
                     <td>
+
+                        @if (item.DaThanhToan != true)
+                        {
+                            if (item.DaHuy != true)
+                            {
+                                <a href="@Url.Action("DestroyCard","Home" ,new {@maDH = item.MaDDH })">
+                                    Hủy đơn hàng
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="@Url.Action("ReOrderCard","Home" ,new {@maDH = item.MaDDH })">
+                                    Đặt lại đơn
+                                </a>
+                            }
+
+                        }
+
                         <a href="@Url.Action("DetailCard","Home" ,new {@maDH = item.MaDDH })">
                             Xem chi tiết đơn hàng
                         </a>
