--- a/WebSiteClothesStore/Views/Home/HeaderOfLayoutPartial.cshtml
+++ b/WebSiteClothesStore/Views/Home/HeaderOfLayoutPartial.cshtml
@@ -6,17 +6,17 @@
 <div class="header">
 
     <div class="logoHeader">
-        <a style="color: white;" class="logoHeader--item"  href="@Url.Action("Index","Home")">Slaider</a>
-        
+        <a style="color: white;" class="logoHeader--item" href="@Url.Action("Index","Home")">Slaider</a>
+
     </div>
     @* tim kiem *@
 
-<ul class="mucluc">
-    <li class="mucluc-item"> <a href="@Url.Action("Index","Home")">Home</a> </li>
-    <li class="mucluc-item">@Html.Action("MenuPartial", "Home")</li>
-    <li class="mucluc-item">Blog</li>
-    <li class="mucluc-item">Abouts</li>
-</ul>
+    <ul class="mucluc">
+        <li class="mucluc-item"> <a href="@Url.Action("Index","Home")">Home</a> </li>
+        <li class="mucluc-item">@Html.Action("MenuPartial", "Home")</li>
+        <li class="mucluc-item">Blog</li>
+        <li class="mucluc-item">Abouts</li>
+    </ul>
 
     <ul class="left-header">
 
@@ -25,10 +25,10 @@
                 <ul class="search" style="display:flex;">
                     @using (Html.BeginForm("LayTuKhoaTimKiem", "TimKiem"))
                     {
-                      
+
                         <input class="search--item" name="tuKhoa" id="tuKhoa" type="search" />
-                        <input class="btn btn-outline-secondary  ml-3 my-sm-0" type="submit" value="Search"/>
-                       
+                        <input class="btn btn-outline-secondary  ml-3 my-sm-0" type="submit" value="Search" />
+
                     }
                 </ul>
             </div>
@@ -37,7 +37,7 @@
             <div class="w3ls_right_nav ml-auto d-flex navLogin">
 
                 <ul class="account">
-                    @if (Session["TaiKhoan"] != null || Session["TaiKhoan"] != "")
+                    @if (Session["TaiKhoan"] != null|| Session["TaiKhoan"] != "")
                     {
                         ThanhVien tv = (ThanhVien)Session["TaiKhoan"];
                         if (tv != null)
@@ -47,22 +47,22 @@
                         }
                         else
                         {
-                            <ul class="dangnhap">
+                     
                                 <li><a style="color: white" id="btnDangNhap" href="#">Đăng nhập</a></li>
-                            </ul>
-                            }
+                    
                         }
+                    }
                 </ul>
 
             </div>
         </li>
         <li>
-         
+
             <a href="@Url.Action("ShowCardUser","Home")">
                 <i style="font-size:20px; color: white" class="far fa-user"></i>
             </a>
 
-            
+
         </li>
         <li class="giohang--cha">
             <div class="giohang">
@@ -82,18 +82,18 @@
                                     {
                                         countSoLuong = (int)product.Sum(p => p.SoLuong);
                                     }
-                            <span class="countCard" id="countCard">@countSoLuong</span> }
-                        else
+                                    <span class="countCard" id="countCard">@countSoLuong</span> }
+                                else
                         if (Session["GioHangTam"] != null) // chưa có đăng nhập
-                        {
-                            List<ItemCardTemp> itemCardTemps = Session["GioHangTam"] as List<ItemCardTemp>;
-                            <span class="countCard" id="countCard">@itemCardTemps.Sum(p=>p.SoLuong)</span>
-                        }
-                        else
-                        {
-                            <span class="countCard" id="countCard">0</span>
-                        }
-                        </button>
+                                {
+                                    List<ItemCardTemp> itemCardTemps = Session["GioHangTam"] as List<ItemCardTemp>;
+                                    <span class="countCard" id="countCard">@itemCardTemps.Sum(p => p.SoLuong)</span>
+                                }
+                                else
+                                {
+                                    <span class="countCard" id="countCard">0</span>
+                                }
+                            </button>
 
                         </a>
                     </div>
@@ -135,102 +135,133 @@
 
                 @using (Ajax.BeginForm("DangKy", "Home", new { @strURL = Request.Url.ToString() }, new AjaxOptions { InsertionMode = InsertionMode.Replace, UpdateTargetId = "ThongBao" })) // muons chạy được các file view thì phải chạy thông qua controller của nó
                 {
-                    <div class="formRegister">
-                        <div class="loginInformation">
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="taiKhoan">Tên đăng nhập</label>
-                                <input type="text" name="TaiKhoan" id="taiKhoan" class="form-control form-control-lg" />
+                    <div class="row3">
+                        <div class="formRegister">
+                            <div class="loginInformation">
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="taiKhoan">Tên đăng nhập</label>
+                                    <input type="text" name="TaiKhoan" id="taiKhoan" class="form-control form-control-lg" />
+
+                                </div>
+
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="matkhau">Mật khẩu </label>
+                                    <input type="password" name="MatKhau" id="matkhau" class="form-control form-control-lg" />
+
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="reMatKhau">Nhập lại mật khẩu</label>
+                                    <input type="password" name="reMatKhau" id="reMatKhau" class="form-control form-control-lg" />
+                                </div>
 
                             </div>
+                            <div class="personalInfor">
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="hoten">Họ tên</label>
+                                    <input type="text" name="HoTen" id="hoten" class="form-control form-control-lg" />
+                                </div>
 
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="matkhau">Mật khẩu </label>
-                                <input type="password" name="MatKhau" id="matkhau" class="form-control form-control-lg" />
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="email">Your Email</label>
+                                    <input type="email" id="email" name="Email" class="form-control form-control-lg" />
 
-                            </div>
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="reMatKhau">Nhập lại mật khẩu</label>
-                                <input type="password" name="reMatKhau" id="reMatKhau" class="form-control form-control-lg" />
-                            </div>
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="sdt">Nhập số điện thoại của</label>
+                                    <input type="number" id="sdt" name="SDT" class="form-control form-control-lg" />
 
-                        </div>
-                        <div class="personalInfor">
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="hoten">Họ tên</label>
-                                <input type="text" name="HoTen" id="hoten" class="form-control form-control-lg" />
-                            </div>
-
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="email">Your Email</label>
-                                <input type="email" id="email" name="Email" class="form-control form-control-lg" />
-
-                            </div>
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="sdt">Nhập số điện thoại của</label>
-                                <input type="number" id="sdt" name="SDT" class="form-control form-control-lg" />
-
-                            </div>
-                            <label class="form-label" for="diaChi">Nhập số địa chỉ</label>
-                            <textarea style="display:block;" id="diaChi" class="addressClient" name="DiaChi" placeholder="Nhập địa chỉ của bạn" style="width:370px; height:82px;">
+                                </div>
+                                <label class="form-label" for="diaChi">Nhập số địa chỉ</label>
+                                <textarea style="display: block; margin-bottom: 10px; width: 370px; height: 82px;" id="diaChi" class="addressClient" name="DiaChi" placeholder="Nhập địa chỉ của bạn">
                             
         
                        </textarea>
-                            <select name="CauHoi">
-                                <option>Shop có đồ đẹp không</option>
-                                <option>Shop có bán mắc không</option>
-                                <option>Shop có có bán nhiều đồ không</option>
-                                <option>Khi nào thì shop giảm giá</option>
-                            </select>
+                                <select name="CauHoi">
+                                    <option>Shop có đồ đẹp không</option>
+                                    <option>Shop có bán mắc không</option>
+                                    <option>Shop có có bán nhiều đồ không</option>
+                                    <option>Khi nào thì shop giảm giá</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-check d-flex justify-content-center mb-5">
+                            <input class="form-check-input me-2"
+                                   type="checkbox"
+                                   value=""
+                                   id="form2Example3cg" />
+                            <label class="form-check-label" for="form2Example3g">
+                                I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                            </label>
                         </div>
                     </div>
-                    <div class="form-check d-flex justify-content-center mb-5">
-                        <input class="form-check-input me-2"
-                               type="checkbox"
-                               value=""
-                               id="form2Example3cg" />
-                        <label class="form-check-label" for="form2Example3g">
-                            I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                        </label>
-                    </div>
 
-                    <div class="d-flex justify-content-center">
-                        <input type="submit" value="Đăng ký" id="btnRegister">
+                    <div class="footerDK">
+                        <div class="d-flex justify-content-center">
+                            <input type="submit" value="Đăng ký" id="btnRegister" style="margin-bottom: 10px; font-weight: bold;">
 
+                        </div>
+                        <button type="button" class="btnFormDangNhap" style="font-weight: bold;">Đăng nhập tại đây</button>
                     </div>
-                    <button type="button" class="btnFormDangNhap">Đăng nhập tại đây</button>
                 }
-            </div>
             </div>
         </div>
     </div>
-    
+</div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="~/Content/js/HeaderOfLayoutPartial.js"></script>
 <style>
-    .account{
-        display:flex;
-        list-style:none;
+    .account {
+        display: flex;
+        list-style: none;
     }
+
     .left-header {
         display: flex;
         justify-content: center;
     }
+
     .logoHeader--item {
         margin: 0 20px;
         font-size: 30px;
         text-decoration: none !important;
     }
 
-    .logoHeader--item:hover{
-        color: white;
-        background: #23ABF2;
-        border-radius: 3px;
+        .logoHeader--item:hover {
+            color: white;
+            background: #23ABF2;
+            border-radius: 3px;
+        }
+
+    .formLogin {
+        background-color: antiquewhite;
     }
 
+    .row1 h1 {
+        font-weight: bold;
+        font-style: italic;
+        text-align: center;
+    }
+
+    .row1 p {
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .footerDK {
+        margin-top: -30px;
+    }
+
+    .btn.dis
     .logoHeader h1 {
         margin: 0;
+    }
+
+    .row1 a {
+        font-weight: bold;
+        color: black;
     }
 
     .search--item {
@@ -252,26 +283,38 @@
         height: 20px;
         top: -6px;
     }
+
     .header_hover {
         position: relative;
     }
-    .header_hover:before {
-        content: "";
-        position: absolute;
-        width: 15%;
-        height: 25px;
-        background-color: white;
-        top:-7%;
-        left: 0;
-        border-top-left-radius:2000px;
-        border-top-right-radius:2000px;
+
+        .header_hover:before {
+            content: "";
+            position: absolute;
+            width: 15%;
+            height: 25px;
+            background-color: white;
+            top: -7%;
+            left: 0;
+            border-top-left-radius: 2000px;
+            border-top-right-radius: 2000px;
+        }
+
+    .itemProduct {
+        list-style: none;
+        padding-left: 20px;
     }
-    .itemProduct{
-        list-style:none;
-        padding-left:20px;
-    }
+
     .mucluc-item__qr:hover .header_hover {
         display: block;
+    }
+
+    .row3 {
+        padding: 30px;
+    }
+
+    .loginInformation {
+        padding-right: 30px;
     }
 
     .header_hover {
@@ -280,21 +323,26 @@
         width: 500px;
         height: 300px;
         display: none;
-        z-index:3;
+        z-index: 3;
+    }
+
+    .register-form {
+        border-radius: 50px 50px 50px;
     }
 
     .mucluc {
         list-style: none;
         display: flex;
         color: lightgray;
-        font-size: 20px ;
-        position:relative;
+        font-size: 20px;
+        position: relative;
     }
-    .mucluc-item{
+
+    .mucluc-item {
         margin: 0 15px;
         cursor: pointer;
     }
-   /* .mucluc:before{
+        /* .mucluc:before{
         content:"";
         position:absolute;
         width:100%;
@@ -303,25 +351,25 @@
         top:0;
         left:0;
     }*/
-    .mucluc-item a {
-        color: lightgray;
-        text-decoration: none;
-    }
-
-    .mucluc-item a:hover {
-        color: #3377ff
-    }
-
-   .mucluc-item:hover{
-       color: white;
-   }
-
-        body {
-            margin: 0;
-            padding: 0;
+        .mucluc-item a {
+            color: lightgray;
+            text-decoration: none;
         }
 
-    :root{
+            .mucluc-item a:hover {
+                color: #3377ff
+            }
+
+        .mucluc-item:hover {
+            color: white;
+        }
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    :root {
         --text-color: white;
     }
 
@@ -352,20 +400,31 @@
         margin: 0 20px;
     }
 
-   
+    .btnRegistration {
+        font-weight: bold;
+        color: black;
+    }
+
+    #btnLogin {
+        font-weight: bold;
+        border-radius: 6px 6px 6px;
+    }
 
     .dangnhap {
-        margin: 0 12px;
+       /* margin: 0 12px;
         display: flex;
         list-style: none;
         font-size: 20px;
-        padding-left: 0
+        padding-left: 0*/
+    }
+
+    .btn {
+        font-weight: bold;
     }
 
     .search {
         display: flex;
         list-style: none;
-        
     }
 
     .header {
@@ -388,6 +447,14 @@
         border: none;
     }
 
+    .closeForm {
+        font-size: 10px;
+        border-radius: 0px 20px 0px 0px;
+        padding: 10px;
+        right: -1px;
+        top: -1px;
+    }
+
     #popup-login {
         top: 10%;
         left: 0;
@@ -398,6 +465,8 @@
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
+        border: 2px solid black;
+        border-radius: 10% 10% 10% 10%;
     }
 
     .formLogin {
@@ -410,13 +479,27 @@
         display: none;
     }
 
+    #login-form {
+        border-radius: 20px 20px 20px 20px;
+    }
+
     .userName {
+        padding: 5px;
         width: 100%;
         margin-bottom: 10px;
+        border-radius: 15px;
+        border-radius: 15px 15px;
+        border-radius: 15px 15px 15px;
+        border-radius: 15px 15px 15px;
     }
 
     .passWord {
         width: 100%;
+        padding: 5px;
+        border-radius: 15px;
+        border-radius: 15px 15px;
+        border-radius: 15px 15px 15px;
+        border-radius: 15px 15px 15px;
     }
 
     .top_nav {
@@ -433,6 +516,7 @@
         display: flex;
         flex-direction: row;
     }
+
     .register-form {
         background-color: black;
         width: 50%;
@@ -443,18 +527,20 @@
         display: flex;
         flex-direction: column;
         min-width: 50%;
-        min-height:80%;
+        min-height: 80%;
         word-wrap: break-word;
         background-color: #fff;
         background-clip: border-box;
         border: 1px solid rgba(0,0,0,.125);
         border-radius: 0.5rem
     }
-    .formRegister{
-        display:flex;
+
+    .formRegister {
+        display: flex;
     }
-    .register-form{
-        display:none;
+
+    .register-form {
+        display: none;
     }
 </style>
 <script>
@@ -463,7 +549,7 @@
             "display": "block",
         });
         $("#popup-login").fadeIn(500);
-       
+
     })
     $(".closeForm").click(function () {
         $("#popup-login").slideUp(500);
