Nam bổ sung thêm nữa nha

--- a/WebSiteClothesStore/Views/BangSanPham/Edit.cshtml
+++ b/WebSiteClothesStore/Views/BangSanPham/Edit.cshtml
@@ -133,8 +133,8 @@
 
                     <input id="Anh1" type="file" name="fileUpload" class="Anh1 inputAnh1" width="150px" height="150px" accept="image/*"
                            style="display:none;" />
-                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh1" />
-                    <img src="" class="Anh1" id="Anh1" width="100px" height="150px" />
+                    <input type="button" value="Đổi" class="btn btn-success btn-chon btnUpload" data-id="Anh1" />
+                    <img src="@Model.Anh1" class="Anh1" id="Anh1" width="100px" height="150px" />
                 </div>
             </div>
 
@@ -148,8 +148,8 @@
 
                     <input id="Anh2" type="file" name="fileUpload" class="Anh2 inputAnh2" width="150px" height="150px" accept="image/*"
                            style="display:none;" />
-                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh2" />
-                    <img src="" class="Anh2" id="Anh2" width="100px" height="150px" />
+                    <input type="button" value="Đổi" class="btn btn-success btn-chon btnUpload" data-id="Anh2" />
+                    <img src="@Model.Anh2" class="Anh2" id="Anh2" width="100px" height="150px" />
                 </div>
             </div>
 
@@ -162,8 +162,8 @@
 
                     <input id="Anh3" type="file" name="fileUpload" class="Anh3 inputAnh3" width="150px" height="150px" accept="image/*"
                            style="display:none;" />
-                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh3" />
-                    <img src="" class="Anh3" id="Anh3" width="100px" height="150px" />
+                    <input type="button" value="Đổi" class="btn btn-success btn-chon btnUpload" data-id="Anh3" />
+                    <img src="@Model.Anh3" class="Anh3" id="Anh3" width="100px" height="150px" />
                 </div>
             </div>
 
@@ -176,8 +176,8 @@
 
                     <input id="Anh4" type="file" name="fileUpload" class="Anh4 inputAnh4" accept="image/*"
                            style="display:none;" />
-                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh4" />
-                    <img src="" class="Anh4" id="Anh4" width="100px" height="150px" />
+                    <input type="button" value="Đổi" class="btn btn-success btn-chon btnUpload" data-id="Anh4" />
+                    <img src="@Model.Anh4" class="Anh4" id="Anh4" width="100px" height="150px" />
                 </div>
             </div>
 
@@ -190,8 +190,8 @@
 
                     <input id="Anh5" type="file" name="fileUpload" class="Anh5 inputAnh5" width="150px" height="150px" accept="image/*"
                            style="display:none;" />
-                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh5" />
-                    <img src="" class="Anh5" id="Anh5" width="100px" height="150px" />
+                    <input type="button" value="Đổi" class="btn btn-success btn-chon btnUpload" data-id="Anh5" />
+                    <img src="@Model.Anh5" class="Anh5" id="Anh5" width="100px" height="150px" />
                 </div>
             </div>
         </div>
@@ -203,15 +203,6 @@
             </div>
         </div>
     </div>
-
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
-    </div>
-    
 }
 
 <div>
