--- a/WebSiteClothesStore/Content/css/HeaderOfLayoutPartial.css
+++ b/WebSiteClothesStore/Content/css/HeaderOfLayoutPartial.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color: #E0FFFF;
 }
 
 h1 a.navbar-brand {
@@ -11,6 +12,7 @@ h1 a.navbar-brand {
     text-transform: uppercase;
     line-height: 0;
 }
+
 .top_hub_cart {
     position: relative;
 }
