--- a/WebSiteClothesStore/Views/CTSanPham/ListCTSanPham.cshtml
+++ b/WebSiteClothesStore/Views/CTSanPham/ListCTSanPham.cshtml
@@ -42,6 +42,9 @@
         }
     </tbody>
 </table>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
 <style>
     body {
         font-family: 'Open Sans', sans-serif;
